z-index of burger icon = 10; fixed animatoria button click

--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@
 
     .bred{
       cursor: pointer;
+      z-index: 1000;
     }
 
     .rubberBody {
