--- a/styleMobile.css
+++ b/styleMobile.css
@@ -9,7 +9,6 @@
 }
 
 .animatoria {
-  width: calc(100% - 50px);
 }
 
 header {
